# ITStepProjects

./: .gitignore  LICENSE  README.md
C Programming/Array/: CMakeLists.txt  main.cpp
C Programming/Array Copy/: CMakeLists.txt  main.cpp
C Programming/Base Conversion/: CMakeLists.txt  main.cpp
C Programming/Big Integer/: CMakeLists.txt  main.cpp
C Programming/Binary/: CMakeLists.txt  main.cpp
C Programming/Binary Search/: CMakeLists.txt  main.cpp
C Programming/Booking Seats/: CMakeLists.txt  main.cpp
C Programming/Bubble Sort/: BubbleSort.h  CMakeLists.txt  main.cpp
C Programming/Cargo Aircraft/: CMakeLists.txt  main.cpp
C Programming/Database/: CMakeLists.txt  Data.h  Person.h  contact.txt  main.cpp
C Programming/Days Counter/: CMakeLists.txt  main.cpp
C Programming/Debug test/: CMakeLists.txt  main.cpp
C Programming/Discount/: Prog.cpp
C Programming/Draw Rectangle/: CMakeLists.txt  main.cpp
C Programming/Draw Shapes/: CMakeLists.txt  main.cpp
C Programming/Draw Triangle/: CMakeLists.txt  main.cpp
C Programming/Exponential/: CMakeLists.txt  main.cpp
C Programming/File/: CMakeLists.txt  main.cpp
C Programming/Find Integer In Number/: CMakeLists.txt  main.cpp
C Programming/Fixed Deposit/: CMakeLists.txt  main.cpp
C Programming/GOTO/: Prog.cpp
C Programming/Guess Number/: CMakeLists.txt  main.cpp
C Programming/Insertion Sort/: CMakeLists.txt  main.cpp
C Programming/Leaderboard/: CMakeLists.txt  array.h  main.cpp
C Programming/Linear Search/: CMakeLists.txt  LinearSearch.h  (+1 more)
C Programming/MobileBanking/: CMakeLists.txt  main.cpp
(+324 files in other folders)
